--- a/index.html
+++ b/index.html
@@ -3,24 +3,25 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Mis Gráficos</title>
+  <title>Visualización de Gráficos</title>
   <style>
     iframe {
       width: 100%;
-      height: 900px;
-      border: 1px solid #ccc;
-      margin-bottom: 200px;
+      height: 600px;
+      border: none;
+      margin-bottom: 30px;
     }
   </style>
 </head>
 <body>
-  <h1>Visualización de Gráficos</h1>
+  <h1>Gráficos del Hospital María Auxiliadora</h1>
 
-  <h2>Gráfico 1</h2>
-  <iframe src="gráfico_seguro.html"></iframe>
+  <h2>Distribución de edades</h2>
+  <iframe src="grafico1.html"></iframe>
 
-  <h2>Gráfico 2</h2>
-  <iframe src="gráfico_edad.html"></iframe>
+  <h2>Proporción de asegurados</h2>
+  <iframe src="grafico2.html"></iframe>
 
+  <!-- Agrega más gráficos aquí -->
 </body>
 </html>
