--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       width: 100%;
       height: 1000px;
       border: none;
-      margin-bottom: 30px;
+     
     }
   </style>
 </head>
@@ -17,10 +17,10 @@
   <h1>Gráficos del Hospital María Auxiliadora</h1>
 
   <h2>Distribución de edades</h2>
-  <iframe src="grafico1.html"></iframe>
+  <iframe src="gráfico_seguro.html" style="border : none;"></iframe>
 
   <h2>Proporción de asegurados</h2>
-  <iframe src="grafico2.html"></iframe>
+  <iframe src="grafico_edad" style="border : none;></iframe>
 
   <!-- Agrega más gráficos aquí -->
 </body>
