--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   <h1>Gráficos del Hospital María Auxiliadora</h1>
 
   <h2>Distribución de edades</h2>
-  <iframe src="gráfico_seguro.html" style="border : none;"></iframe>
-
+ 
+  <iframe src="grafico_edad.html" style="border : none;"></iframe>
   <h2>Proporción de asegurados</h2>
-  <iframe src="grafico_edad" style="border : none;></iframe>
+  <iframe src="gráfico_seguro.html" style="border : none;"></iframe>
 
   <!-- Agrega más gráficos aquí -->
 </body>
