--- a/index.html
+++ b/index.html
@@ -7,21 +7,23 @@
   <style>
     iframe {
       width: 100%;
-      height: 1000px;
+      height: 600px;
       border: none;
-     
+      margin-bottom: 40px;
+    }
+    body {
+      font-family: sans-serif;
+      padding: 20px;
     }
   </style>
 </head>
 <body>
-  <h1>Gráficos del Hospital María Auxiliadora</h1>
+  <h1>Visualización de Gráficos</h1>
 
-  <h2>Distribución de edades</h2>
- 
-  <iframe src="grafico_edad.html" style="border : none;"></iframe>
-  <h2>Proporción de asegurados</h2>
-  <iframe src="gráfico_seguro.html" style="border : none;"></iframe>
+  <h2>Gráfico por Edad</h2>
+  <iframe src="grafico_edad.html"></iframe>
 
-  <!-- Agrega más gráficos aquí -->
+  <h2>Gráfico por Tipo de Seguro</h2>
+  <iframe src="gráfico_seguro.html"></iframe>
 </body>
 </html>
