--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Visualización de Gráficos</title>
   <style>
     iframe {
-      width: 100%;
+      width: 1000px;
       height: 600px;
       border: none;
       margin-bottom: 40px;
@@ -21,9 +21,9 @@
   <h1>Visualización de Gráficos</h1>
 
   <h2>Gráfico por Edad</h2>
-  <iframe src="grafico_edad.html"></iframe>
+  <iframe src="grafico_edad.html" width="800" height="500"></iframe>
 
   <h2>Gráfico por Tipo de Seguro</h2>
-  <iframe src="gráfico_seguro.html"></iframe>
+  <iframe src="gráfico_seguro.html" width="800" height="500"></iframe>
 </body>
 </html>
