--- a/index.html
+++ b/index.html
@@ -25,5 +25,8 @@
 
   <h2>Gráfico por Tipo de Seguro</h2>
   <iframe src="gráfico_seguro.html" width="800" height="500"></iframe>
+  
+  <h2>Análisis de citas en el hospital María Auxiliadora</h2>
+  <iframe src="gráfico_cita.html" width="800" height="500"></iframe>
 </body>
 </html>
