--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
   <meta charset="UTF-8">
   <title>Visualización de Gráficos</title>
   <style>
+    
+    .grafico-derecha {
+      float: right;
+      width: 800px;
+      height: 1000px;
+      border: none;
+      margin-left: 20px;
+      }
+
+
+    
     iframe {
       width: 1000px;
       height: 600px;
@@ -27,6 +38,6 @@
   <iframe src="gráfico_seguro.html" width="800" height="500"></iframe>
   
   <h2>Análisis de citas en el hospital María Auxiliadora</h2>
-  <iframe src="gráfico_cita.html" width="800" height="500"></iframe>
+  <iframe class="grafico-derecha"  src="gráfico_cita.html" width="800" height="1000"></iframe>
 </body>
 </html>
