--- a/index.html
+++ b/index.html
@@ -6,15 +6,6 @@
   <title>Visualización de Gráficos</title>
   <style>
     
-    .grafico-derecha {
-      float: right;
-      width: 800px;
-      height: 1000px;
-      border: none;
-      margin-left: 20px;
-      }
-
-
     
     iframe {
       width: 1000px;
@@ -38,6 +29,6 @@
   <iframe src="gráfico_seguro.html" width="800" height="500"></iframe>
   
   <h2>Análisis de citas en el hospital María Auxiliadora</h2>
-  <iframe class="grafico-derecha"  src="gráfico_cita.html" width="800" height="1000"></iframe>
+  <iframe class="grafico-derecha"  src="gráfico_cita.html" width="1000" height="800" style="float: right; margin-left: 20px;"></iframe>
 </body>
 </html>
