--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
 
   <h2>Gráfico por Tipo de Seguro</h2>
   <iframe src="gráfico_seguro.html" width="800" height="500"></iframe>
-  
+    
+<div style="text-align: right;">  
   <h2>Análisis de citas en el hospital María Auxiliadora</h2>
-  <iframe class="grafico-derecha"  src="gráfico_cita.html" width="1000" height="800" style="float: right; margin-left: 20px;"></iframe>
+  <iframe class="grafico-derecha"  src="gráfico_cita.html" width="1000" height="800" style="margin-left: 20px;"></iframe>
+</div>
+
 </body>
 </html>
