--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </style>
 </head>
 <body>
-  <h1>Visualización de Gráficos</h1>
+  <h1>Hospital María Auxiliadora - Análisis de datos mediante gráficos</h1>
 
    <h2>Gráfico por Edad</h2>
    <iframe src="grafico_edad.html" width="800" height="500"></iframe>
