--- a/index.html
+++ b/index.html
@@ -29,11 +29,13 @@
    <iframe src="grafico_edad.html" width="800" height="500"></iframe>
 
    <h2>Gráfico por Tipo de Seguro</h2>
-   <iframe src="gráfico_seguro.html" width="900" height="700"></iframe>
+   <iframe src="gráfico_seguro.html" width="900" height="650"></iframe>
       
    <h2>Análisis de citas en el hospital María Auxiliadora</h2>
    <iframe class="grafico-derecha"  src="gráfico_cita.html" width="1000" height="800" style="margin-left: 20px;"></iframe>
-
+   
+   <h2>Análisis de citas en el hospital María Auxiliadora según la especialidad médica</h2>
+   <iframe class="grafico-derecha"  src="gráfico_cita.html" width="1920" height="800" style="margin-left: 20px;"></iframe>
 
     
 
