--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
    <iframe class="grafico-derecha"  src="gráfico_cita.html" width="1000" height="800" style="margin-left: 20px;"></iframe>
    
    <h2>Análisis de citas en el hospital María Auxiliadora según la especialidad médica</h2>
-   <iframe class="grafico-derecha"  src="gráfico_cita.html" width="1920" height="800" style="margin-left: 20px;"></iframe>
+   <iframe class="grafico-derecha"  src="grafico_especialidades.html" width="1920" height="800" style="margin-left: 20px;"></iframe>
 
     
 
