--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Visualización de Gráficos</title>
+  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>   
   <style>
 
     iframe {
@@ -36,6 +37,65 @@
    
    <h2>Análisis de citas en el hospital María Auxiliadora según la especialidad médica</h2>
    <iframe class="grafico-derecha"  src="grafico_especialidades.html" width="1920" height="800" style="margin-left: 20px;"></iframe>
+   
+   <h2>Distribución de Días de Espera</h2>
+   <div id="histograma" style="width: 100%; height: 500px;"></div>
+
+   <h2>Distribución por Especialidad</h2>
+   <div id="piechart" style="width: 100%; height: 500px;"></div>
+
+   
+   <script>
+    // Cargar los datos desde un archivo JSON o incrustarlos directamente
+       fetch('datos.json')
+         .then(response => response.json())
+         .then(data => {
+           const dias = data.map(d => d.DIFERENCIA_DIAS);
+           const especialidades = data.map(d => d.ESPECIALIDAD);
+
+        // Crear histograma
+           const histData = [{
+             x: dias,
+             type: 'histogram',
+             marker: { color: '#1f77b4' }
+           }];
+
+           const histLayout = {
+             title: 'Días de Espera',
+             xaxis: { title: 'Días' },
+             yaxis: { title: 'Frecuencia' }
+           };
+
+           Plotly.newPlot('histograma', histData, histLayout);
+
+        // Evento de clic en el histograma
+           document.getElementById('histograma').on('plotly_click', function(event) {
+             const selectedDay = event.points[0].x;
+
+             const filtrados = data.filter(d => d.DIFERENCIA_DIAS === selectedDay);
+             const conteo = {};
+             filtrados.forEach(d => {
+               conteo[d.ESPECIALIDAD] = (conteo[d.ESPECIALIDAD] || 0) + 1;
+             });
+
+             const labels = Object.keys(conteo);
+             const values = Object.values(conteo);
+
+             const pieData = [{
+               labels: labels,
+               values: values,
+               type: 'pie'
+             }];
+
+             const pieLayout = {
+               title: `Especialidades para ${selectedDay} días de espera`
+             };
+
+             Plotly.newPlot('piechart', pieData, pieLayout);
+           });
+        });
+     </script>
+   
 
     
 
