--- a/index.html
+++ b/index.html
@@ -45,56 +45,66 @@
    <div id="piechart" style="width: 100%; height: 500px;"></div>
 
    
-   <script>
-    // Cargar los datos desde un archivo JSON o incrustarlos directamente
-       fetch('datos.json')
-         .then(response => response.json())
-         .then(data => {
-           const dias = data.map(d => d.DIFERENCIA_DIAS);
-           const especialidades = data.map(d => d.ESPECIALIDAD);
+   
+<script>
+  fetch('datos.json')
+    .then(response => response.json())
+    .then(data => {
+      const dias = data.map(d => d.DIFERENCIA_DIAS);
 
-        // Crear histograma
-           const histData = [{
-             x: dias,
-             type: 'histogram',
-             marker: { color: '#1f77b4' }
-           }];
+      // Crear histograma
+      const histData = [{
+        x: dias,
+        type: 'histogram',
+        marker: { color: '#1f77b4' }
+      }];
 
-           const histLayout = {
-             title: 'Días de Espera',
-             xaxis: { title: 'Días' },
-             yaxis: { title: 'Frecuencia' }
-           };
+      const histLayout = {
+        title: 'Días de Espera',
+        xaxis: { title: 'Días' },
+        yaxis: { title: 'Frecuencia' }
+      };
 
-           Plotly.newPlot('histograma', histData, histLayout);
+      Plotly.newPlot('histograma', histData, histLayout);
 
-        // Evento de clic en el histograma
-           document.getElementById('histograma').on('plotly_click', function(event) {
-             const selectedDay = event.points[0].x;
+      // Función para actualizar el gráfico de pastel
+      function actualizarPieChart(diaSeleccionado) {
+        const filtrados = data.filter(d => d.DIFERENCIA_DIAS === diaSeleccionado);
+        const conteo = {};
+        filtrados.forEach(d => {
+          conteo[d.ESPECIALIDAD] = (conteo[d.ESPECIALIDAD] || 0) + 1;
+        });
 
-             const filtrados = data.filter(d => d.DIFERENCIA_DIAS === selectedDay);
-             const conteo = {};
-             filtrados.forEach(d => {
-               conteo[d.ESPECIALIDAD] = (conteo[d.ESPECIALIDAD] || 0) + 1;
-             });
+        const labels = Object.keys(conteo);
+        const values = Object.values(conteo);
 
-             const labels = Object.keys(conteo);
-             const values = Object.values(conteo);
+        const pieData = [{
+          labels: labels,
+          values: values,
+          type: 'pie'
+        }];
 
-             const pieData = [{
-               labels: labels,
-               values: values,
-               type: 'pie'
-             }];
+        const pieLayout = {
+          title: `Especialidades para ${diaSeleccionado} días de espera`
+        };
 
-             const pieLayout = {
-               title: `Especialidades para ${selectedDay} días de espera`
-             };
+        Plotly.newPlot('piechart', pieData, pieLayout);
+      }
 
-             Plotly.newPlot('piechart', pieData, pieLayout);
-           });
-        });
-     </script>
+      // Mostrar gráfico de pastel inicial con el día más frecuente
+      const diaMasFrecuente = dias.sort((a,b) =>
+        dias.filter(v => v===a).length - dias.filter(v => v===b).length
+      ).pop();
+      actualizarPieChart(diaMasFrecuente);
+
+      // Evento de clic en el histograma
+      document.getElementById('histograma').on('plotly_click', function(event) {
+        const diaSeleccionado = event.points[0].x;
+        actualizarPieChart(diaSeleccionado);
+      });
+    });
+</script>
+
    
 
     
