--- a/index.html
+++ b/index.html
@@ -38,76 +38,12 @@
    <h2>Análisis de citas en el hospital María Auxiliadora según la especialidad médica</h2>
    <iframe class="grafico-derecha"  src="grafico_especialidades.html" width="1920" height="800" style="margin-left: 20px;"></iframe>
    
-   <h2>Distribución de Días de Espera</h2>
-   <div id="histograma" style="width: 100%; height: 500px;"></div>
 
-   <h2>Distribución por Especialidad</h2>
-   <div id="piechart" style="width: 100%; height: 500px;"></div>
+   <h2>Distribución de Días de Espera y Especialidades</h2>
+   <iframe src="grafico_espera.html" width="1000" height="1000"></iframe>
 
-   
-   
-<script>
-  fetch('datos.json')
-    .then(response => response.json())
-    .then(data => {
-      const dias = data.map(d => d.DIFERENCIA_DIAS);
-
-      // Crear histograma
-      const histData = [{
-        x: dias,
-        type: 'histogram',
-        marker: { color: '#1f77b4' }
-      }];
-
-      const histLayout = {
-        title: 'Días de Espera',
-        xaxis: { title: 'Días' },
-        yaxis: { title: 'Frecuencia' }
-      };
-
-      Plotly.newPlot('histograma', histData, histLayout);
-
-      // Función para actualizar el gráfico de pastel
-      function actualizarPieChart(diaSeleccionado) {
-        const filtrados = data.filter(d => d.DIFERENCIA_DIAS === diaSeleccionado);
-        const conteo = {};
-        filtrados.forEach(d => {
-          conteo[d.ESPECIALIDAD] = (conteo[d.ESPECIALIDAD] || 0) + 1;
-        });
-
-        const labels = Object.keys(conteo);
-        const values = Object.values(conteo);
-
-        const pieData = [{
-          labels: labels,
-          values: values,
-          type: 'pie'
-        }];
-
-        const pieLayout = {
-          title: `Especialidades para ${diaSeleccionado} días de espera`
-        };
-
-        Plotly.newPlot('piechart', pieData, pieLayout);
-      }
-
-      // Mostrar gráfico de pastel inicial con el día más frecuente
-      const diaMasFrecuente = dias.sort((a,b) =>
-        dias.filter(v => v===a).length - dias.filter(v => v===b).length
-      ).pop();
-      actualizarPieChart(diaMasFrecuente);
-
-      // Evento de clic en el histograma
-      document.getElementById('histograma').on('plotly_click', function(event) {
-        const diaSeleccionado = event.points[0].x;
-        actualizarPieChart(diaSeleccionado);
-      });
-    });
-</script>
 
    
-
-    
 
 
 </body>
