--- a/index.html
+++ b/index.html
@@ -32,13 +32,9 @@
    <h2>Gráfico por Tipo de Seguro</h2>
    <iframe src="gráfico_seguro.html" width="900" height="650"></iframe>
       
-   <h2>Análisis de citas en el hospital María Auxiliadora</h2>
-   <iframe class="grafico-derecha"  src="gráfico_cita.html" width="1000" height="800" style="margin-left: 20px;"></iframe>
-   
-   <h2>Análisis de citas en el hospital María Auxiliadora según la especialidad médica</h2>
-   <iframe class="grafico-derecha"  src="grafico_especialidades.html" width="1920" height="800" style="margin-left: 20px;"></iframe>
-   
-
+   <h2>Gráfico análisis de citas</h2>
+   <iframe src="gráfico_cita.html" width="1900" height="650"></iframe>
+  
    <h2>Distribución de Días de Espera y Especialidades</h2>
    <iframe src="grafico_espera.html" width="1000" height="1000"></iframe>
 
