--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
    <h2>Gráfico análisis de citas</h2>
    <iframe src="gráfico_cita.html" width="1900" height="650"></iframe>
 
+   
+   <iframe src="grafico_espera.html" width="1000" height="1000"></iframe>
 
 
    
